--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Use Secret
-        run: |
-          echo "My API Key is: ${{ secrets.API_KEY }}"
-          # You can also pass it as an environment variable to a specific step
-          # env:
-          #   MY_SECRET_VAR: ${{ secrets.API_KEY }}
-          # run: echo "My secret var is $MY_SECRET_VAR"
+    - uses: actions/checkout@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    - name: Run JavaScript application
+      env:
+        API_KEY: ${{ secrets.API_KEY }} 
+      run: |
+        npm install
+        node app.controller.js
