--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-    - name: Run JavaScript application
-      env:
-        API_KEY: ${{ secrets.API_KEY }} 
-      run: |
-        npm install
-        node app.controller.js
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          check-latest: true
+
+      - name: Verify Node.js installation
+        run: |
+          node -v
+          npm -v
+
+      - name: Run JavaScript application
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+        run: |
+          npm install
+          node app.controller.js
